--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 layout: home
 author_profile: true
 ---
+{% include welcome.html %}
+
 {% include advertising.html %}
+
 Home page is under construction 
 
 
