Changed the image on pod

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ author_profile: true
 
 {% include advertising.html %}
 
-Our next Series is on "Walking with containers" will be published soon.
+Our next Series is on "Walking with containers" will be published soon...
 
 
 
